--- a/tests/atlocal.in
+++ b/tests/atlocal.in
@@ -2,7 +2,7 @@
 
 # Variables used internally by the testsuite.
 EXEEXT='@EXEEXT@'
-GNM_SUPPORT='@GNM_SUPPORT@'
+GNM_READ_SUPPORT='@GNM_READ_SUPPORT@'
 ODF_READ_SUPPORT='@ODF_READ_SUPPORT@'
 PERL='@PERL@'
 WITH_PERL_MODULE='@WITH_PERL_MODULE@'
