Smake: Break svg2png out as separate script.
This makes the output of "make -f Smake" shorter and easier to read.

--- a/Makefile.am
+++ b/Makefile.am
@@ -59,6 +59,7 @@ generate-changelog:
 DIST_HOOKS += generate-changelog
 
 
+include $(top_srcdir)/build-aux/automake.mk
 include $(top_srcdir)/po/automake.mk
 include $(top_srcdir)/lib/automake.mk
 include $(top_srcdir)/doc/automake.mk
