doc: Add files generated by TeX to gitignore.

--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -2,7 +2,19 @@ Makefile
 Makefile.in
 ni.texi
 pspp-dev.info
+pspp.aux
+pspp.cp
+pspp.cps
+pspp.fn
+pspp.fns
 pspp.info*
+pspp.ky
+pspp.log
+pspp.pg
+pspp.toc
+pspp.tp
+pspp.vr
+pspp.vrs
 pspp.xml
 stamp-1
 stamp-vti
