Remove old changelogs from tree.
They tend to result in false positive "grep" hits and are too old to help
most queries.  They are still available in the Git history, of course.

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,7 +28,7 @@ all_q_sources =
 pkgsysconfdir = $(sysconfdir)/$(PACKAGE)
 
 
-EXTRA_DIST = OChangeLog ONEWS pspp-mode.el
+EXTRA_DIST = ONEWS pspp-mode.el
 
 CLEANFILES = 
 CLEAN_LOCAL =
