--- a/configure.ac
+++ b/configure.ac
@@ -336,7 +336,11 @@ PSPP_CHECK_PREREQS
 AC_CONFIG_FILES(
   [Makefile gl/Makefile po/Makefile tests/atlocal perl-module/lib/PSPP.pm])
 
-m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES])
+m4_ifdef(
+  [AM_SILENT_RULES],
+  [AM_SILENT_RULES],
+  [AM_V_P=:
+   AC_SUBST([AM_V_P])])
 
 AC_OUTPUT
 echo "PSPP configured successfully."
