configure: Change the way we work around missing $(AM_V_P).
The existing approach didn't work because AM_V_P was introduced after
AM_SILENT_RULES.

--- a/configure.ac
+++ b/configure.ac
@@ -336,11 +336,7 @@ PSPP_CHECK_PREREQS
 AC_CONFIG_FILES(
   [Makefile gl/Makefile po/Makefile tests/atlocal perl-module/lib/PSPP.pm])
 
-m4_ifdef(
-  [AM_SILENT_RULES],
-  [AM_SILENT_RULES],
-  [AM_V_P=:
-   AC_SUBST([AM_V_P])])
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES])
 
 AC_OUTPUT
 echo "PSPP configured successfully."
