Add some entries to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,24 @@ gitlog-to-changelog
 /package.m4
 /unused-parameter.h
 /warn-on-use.h
+*-test
+po/*.gmo
+utilities/pspp-convert
+utilities/pspp-dump-sav
+perl-module/Makefile
+perl-module/PSPP-Perl-*.tar.gz
+perl-module/PSPP.bs
+perl-module/PSPP.c
+perl-module/blib/
+perl-module/const-c.inc
+perl-module/const-xs.inc
+perl-module/lib/PSPP.pm
+perl-module/pm_to_blib
+perl-module/pspp-module-config
+tests/testsuite.dir/
+tests/testsuite.log
+tests/atconfig
+tests/atlocal
+tests/data/inexactify
+tests/data/sack
+src/ui/gui/include/gtk/gtk.h
